only digits allowed

--- a/add-comma-while-typing/index.html
+++ b/add-comma-while-typing/index.html
@@ -17,6 +17,7 @@
       name="currency"
       id="currency"
       placeholder="Enter Currency"
+      onkeypress="return isNumber(event)"
     />
   </body>
   <script src="script.js"></script>
